# AIVtuber

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  config.example.json  config.yaml  go.mod  go.sum  index.html  main.go  package-lock.json  package.json
backend/api/zhipuai/: cogvideox.go  glm4voice.go
backend/live/bilibili/: README.md  client.go  message_types.go  models.go  request.go  websocket.go
backend/utils/: config.go  wailsApp.go
frontend/: package.json  tsconfig.json
frontend/public/: style.css
frontend/src/: App.vue
frontend/src/components/: danmuShow.vue  liveStatus.vue  vrmModel.vue
services/: httpserver.go  liveBilibili.go
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bilibili.rs  lib.rs  main.rs  proto.rs  proto_tests.rs  proxy.rs
src-tauri/src/api/: bilibili.rs  config.rs  integration.rs  mod.rs  proxy.rs
src-tauri/src/core/: mod.rs  proto.rs  state.rs
src-tauri/src/handlers/: bilibili.rs  config.rs  integration.rs  mod.rs  openai.rs  proxy.rs  tts.rs
src-tauri/src/services/: bilibili.rs  mod.rs  openai.rs  proxy.rs  tts.rs
src/api/: chat.ts
src/components/: Danmu.vue  StatusBar.vue  VTuberCanvas.vue
src/composables/: useBilibiliConnection.ts  useBilibiliEventListener.ts  useDanmuConfig.ts  useMessageHandler.ts  useVTuberManager.ts
src/types/: bilibili.types.ts  bilibililive.ts
src/utils/vrm/: AudioAnalyzer.ts  EmotionAnalyzer.ts  VTuberManager.ts  audio-analyzer.ts  emotion-analyzer.ts  index.ts  types.ts  vtuber-manager.ts
src/views/: LiveRoom.vue
